# stella

./: #ex#  #gyro_averages.f90#  #implicit_solve.f90#  #kt_grids.f90#  #mirror_terms.f90#  #parallel_streaming.f90#  #parameters_physics.f90#  #response_matrix.fpp#  #stella.f90#  #stella_diagnostics.f90#  #time_advance.f90#  #vpamu_grids.f#  #vpamu_grids.f90#  .#gyro_averages.f90  .#implicit_solve.f90  .#parameters_physics.f90  .fortran_git_version  .fprettify.conf  .gitignore  .gitmodules  CBC.in  CITATION.cff  CMakeLists.txt  E  Makefile  Makefile.depend  Makefile.target_stella  README.md  STELLA_RELEASE_1.0.md  adjoint_LM_method.py  adjoint_convergence.f90  adjoint_distfn_arrays.f90  adjoint_field_arrays.f90  adjoint_p_derivatives.f90  adjoint_run.f90  adjoint_write_files.f90  arrays_fields.f90  arrays_kxky.f90  calculations_kxky.f90  common_types.f90  (+90 more)
AUTOMATIC_TESTS/: Makefile  README.md  check_automated_stella_tests_requirements.py  config.ini  conftest.py  create_figure.py  requirements.txt  run_local_stella_simulation.py  system_information.py
COMPILATION/: CMakeLists.txt  Makefile  Makefile.compilerflags  Makefile.depend  Makefile.depend.inputfile  Makefile.externals  Makefile.externals.FORD  Makefile.externals.git_version  Makefile.externals.mini_libstell  Makefile.externals.neasyf  Makefile.externals.utils  Makefile.guide  Makefile.stella  README.md  fortdep
COMPILATION/LoadModules/: README.md  load_modules.dirac  load_modules.gateway  load_modules.leonardo  load_modules.marconi  load_modules.marenostrum  load_modules.pitagora  load_modules.stellar  load_modules.xula
COMPILATION/Makefiles/: Makefile.BGP  Makefile.N8HPC  Makefile.andes  Makefile.archer2  Makefile.archlinux  Makefile.bigben  Makefile.blackbook  Makefile.bluejoule  Makefile.bsc  Makefile.columbus  Makefile.culham  Makefile.davinci  Makefile.debian  Makefile.dirac  Makefile.discovery  Makefile.edison  Makefile.euclid  Makefile.euler  Makefile.fedora  Makefile.franklin  Makefile.gateway  Makefile.getafix  Makefile.gnu_ubuntu  Makefile.gnu_ubuntu_debug  Makefile.hebbe  Makefile.helium  Makefile.hoffman2  Makefile.homer  Makefile.ist  Makefile.jacquard  Makefile.jaguarpf  Makefile.juqueen  Makefile.juropa  Makefile.kestrel  Makefile.kraken  Makefile.leonardo  Makefile.loki2  Makefile.macos  Makefile.macos12  Makefile.macosx  (+29 more)
COMPILATION/Makefiles/Compilers/: Makefile.gcc  Makefile.nag
COMPILATION/cmake/: GKfunctions.cmake
DOCUMENTATION/: stella_docs.md
INPUT_FILES_WEAKLYNL/: RH_init.in  scale_zonal.in  scan_tprim.in  weakly_nonlinear.in
Makefiles/: Makefile.T3E  Makefile.archer  Makefile.archer2  Makefile.bass  Makefile.bassi  Makefile.bsc  Makefile.carver  Makefile.dawson  Makefile.dirac  Makefile.edison  Makefile.euler  Makefile.franklin  Makefile.gcc  Makefile.gnu  Makefile.gnu_ubuntu  Makefile.gnu_ubuntu_debug  Makefile.hector  Makefile.hector_fe  Makefile.hector_fftw2  Makefile.helios  Makefile.helios_fe  Makefile.homer  Makefile.hopper  Makefile.intel  Makefile.jaguar  Makefile.jaguarpf  Makefile.kraken  Makefile.macosx  Makefile.macports  Makefile.marconi  Makefile.mn4  Makefile.perlmutter  Makefile.pleaides  Makefile.ranger  Makefile.raven-intel  Makefile.stellar_gcc  Makefile.tungsten  Makefile.ypi_server
NEO_stella_env/: pyvenv.cfg
STELLA_CODE/: README.md  debug_flags.f90  default_input_file.in  default_input_file_objective_REMOVE_WHEN_FINISHED.in  dist_redistribute.f90  fields_radialvariation.fpp  flow_shear.f90  grids_kxky.f90  init_stella.f90  input_file.f90  multibox.f90  parameters_numerical.f90  parameters_physics.f90  sfincs_interface.fpp  stella.f90  stella_transforms.f90
adjoint_files/: #adjoint_derivatives.dat#
cmake/: FindNetCDF.cmake  FindnetCDF.cmake  FindnetCDFFortran.cmake  GKfunctions.cmake
data_analysis/: ncdf2dict.py  plot_eigenmode_ball_space_electromagnetic_whole_directory.py  plot_eigenmode_ball_space_electrostatic_single_aky.py  plot_eigenmode_ball_space_electrostatic_whole_directory.py  plot_eigenmode_ball_space_stella_and_gs2_electrostatic_whole_directory.py  plot_omega_gamma_vs_aky.py  plot_omega_gamma_vs_aky_convergence_testing.py  plot_omega_gamma_vs_aky_ranged_aky.py  plot_omega_gamma_vs_fprim.py  plot_omega_gamma_vs_nmu.py  plot_omega_gamma_vs_nperiod.py  plot_omega_gamma_vs_nvgrid.py  plot_omega_gamma_vs_nzed.py  plot_omega_gamma_vs_rhostar.py  plot_omega_gamma_vs_rhostar_stella_and_gs2.py  (+4 more)
geo/geo/vmec_interface/: CMakeLists.txt  vmec_to_stella_geometry_interface.f90
git_version/: CMakeLists.txt  Makefile  README.md
git_version/cmake/: GetGitRevisionDescription.cmake
git_version/src/: git_version.f90  git_version_impl.F90  git_version_impl.fpp
src/: CMakeLists.txt  coll_dougherty.f90  coll_fokkerplanck.f90  debug_flags.f90  diagnostics.f90  diagnostics_fluxes_radialvariation.f90  dissipation.f90  dist_fn.f90  dist_fn_arrays.f90  extended_zgrid.f90  ezcdf_GenGet.f90  fields.fpp  flow_shear.f90  g_tofrom_h.f90  geometry.f90  gyro_averages.f90  implicit_solve.f90  init_g.f90  kt_grids.f90  millerlocal.f90  mp.fpp  mp_lu_decomposition.fpp  multibox.fpp  parallel_streaming.f90  physics_parameters.f90  ran.fpp  read_wout_mod.F  redistribute.f90  response_matrix.fpp  run_parameters.f90  sfincs_interface.fpp  sources.fpp  species.f90  spfunc.fpp  stella.f90  stella_diagnostics.f90  stella_geometry.f90  stella_io.fpp  stella_save.fpp  stella_time.f90  (+7 more)
src/utils/: job_manage.fpp  mp.fpp  text_options.f90
src/vmec_interface/: CMakeLists.txt
utils/: #linear_solve.f90#  CMakeLists.txt  Makefile  Makefile.depend  constants.fpp  convert.f90  fft_work.f90  fft_work.fpp  file_utils.fpp  gauss_quad.f90  gk_complex_root.f90  hdf_wrapper.fpp  job_manage.fpp  linear_solve.f90  linear_solve_shared.f90  mds.fpp  mdslib.f90  mp.fpp  mp.fpp~  mp_lu_decomposition.fpp  mt19937.f90  multibox.fpp  netcdf_utils.fpp  pgplot_utils.fpp  ran.fpp  redistribute.f90  redistribute.f90~  shmem.fpp  smooth_step.f90  sort.f90  spfunc.fpp  spl.f90  system_fortran.fpp  text_options.f90
utils/mini_libstell/: CMakeLists.txt  ezcdf_inqvar.f90  parse_extension.f  read_wout_mod.F
(+8890 files in other folders)
